# rs-stm32

./: .gdbinit  .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config.toml
scripts/: disassemble.sh  get_linker_sections.sh  start_gdb.sh  start_gdb_server.sh
src/: main.rs
