[package]
name = "rs-stm32"
version = "0.1.0"
authors = ["Daniel Mancebo Aldea <daniel.m.aldea@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"
panic-itm = "0.4.2"

[dependencies.stm32f1]
version = "0.13.0"
features = ["stm32f103", "rt"]
