[package]
name = "rs-stm32"
version = "0.1.0"
authors = ["Daniel Mancebo Aldea <daniel.m.aldea@hotmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"
panic-itm = "0.4.2"

[dependencies.stm32f1]
version = "0.13.0"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["rt", "stm32f103", "medium"]
