[package]
name = "rs-stm32"
version = "0.1.0"
authors = ["Daniel Mancebo Aldea <daniel.m.aldea@hotmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
panic-itm = "0.4.2"

[dependencies.stm32f0]
version = "0.14.0"
features = ["stm32f0x0", "rt"]

[dependencies.stm32f0xx-hal]
version = "0.18.0"
features = ["rt", "stm32f030x8"]
